avoid the annoying whitespace under the additional images gallery on page entry

--- a/wp-content/themes/makerfaire/scss/entry.scss
+++ b/wp-content/themes/makerfaire/scss/entry.scss
@@ -121,12 +121,15 @@
 				flex-direction: row;
 				flex-wrap: wrap;
 				gap: 15px;
-				margin-bottom: 10px;
+				margin-bottom: -15px;
 				width: calc(100% + 15px) !important;
 			}
 			.owl-item {
 				width: calc(50% - 15px) !important;
 				margin: 0px !important;
+				&:nth-last-child(1):nth-child(odd) {
+					margin-bottom: 15px !important;
+				}
 				.gallery-item {
 					aspect-ratio: 1;
 					overflow: hidden;
@@ -146,8 +149,8 @@
 					}
 					img {
 						width: fit-content;
-						border-radius: 5px;
 						margin: 0 auto;
+						border-radius: 5px;
 					}
 				}
 			}
@@ -374,6 +377,7 @@
 		}
 	}
 }
+
 
 .social-links.reversed {
 	a {
